<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/titulo"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eletric_car"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/bnt_carros"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <Button
        android:id="@+id/bnt_favoritos"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintStart_toEndOf="@id/bnt_carros"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/mew_two"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/mew_two"
        app:layout_constraintTop_toBottomOf="@id/bnt_carros"
        app:layout_constraintLeft_toLeftOf="@id/bnt_carros"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_star"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/bnt_carros"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_o"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/mew_two"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/vl_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300.000,00"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/mew_two"
        app:layout_constraintLeft_toRightOf="@id/tv_preco"/>

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bateria"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/vl_bateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300.000,00"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        app:layout_constraintLeft_toRightOf="@id/tv_bateria"/>

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pot_ncia"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/vl_potencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300.000,00"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        app:layout_constraintLeft_toRightOf="@id/tv_potencia"/>

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recarga"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/vl_recarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300.000,00"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        app:layout_constraintLeft_toRightOf="@id/tv_recarga"/>

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recarga" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:hint="@string/km_percorrido"
        android:maxLength="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh"
        app:layout_constraintStart_toStartOf="@id/et_preco_kwh"
        app:layout_constraintEnd_toEndOf="@id/et_preco_kwh" />
    
    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"/>
    <EditText
        android:id="@+id/et_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        app:layout_constraintLeft_toLeftOf="@id/btn_calcular"
        />




    </androidx.constraintlayout.widget.ConstraintLayout>
